# Personal-Assistant

./: .gitignore  README.md
clients/mcp-client/: client.py  langchain_mcp_client_stdio.py  pyproject.toml
servers/: README.md  checks.py  pyproject.toml  server__v1.py  server__v2.py
servers/mcp_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  conftest.py  test_client_helpers.py  test_e2e_gmail.py  test_e2e_server.py
